@@ -27,8 +27,8 @@ cmake_dependent_option(RUNNER_VBOX_HEADLESS
 # Minimum Versions
 set(KF6_MINIMUM_VERSION "6.0.0")
 set(LIBMENUCACHE_MINIMUM_VERSION "1.1.0")
-set(LXQT_MINIMUM_VERSION "2.1.0")
-set(LXQT_GLOBALKEYS_MINIMUM_VERSION "2.1.0")
+set(LXQT_MINIMUM_VERSION "2.2.0")
+set(LXQT_GLOBALKEYS_MINIMUM_VERSION "2.2.0")
 set(QT_MINIMUM_VERSION "6.6.0")
 set(SHELLQT_MINIMUM_VERSION "6.0.0")
 
@@ -45,7 +45,7 @@ include(LXQtPreventInSourceBuilds)
 include(LXQtCompilerSettings NO_POLICY_SCOPE)
 
 # Patch Version
-set(LXQT_RUNNER_PATCH_VERSION 2)
+set(LXQT_RUNNER_PATCH_VERSION 0)
 set(LXQT_RUNNER_VERSION ${LXQT_MAJOR_VERSION}.${LXQT_MINOR_VERSION}.${LXQT_RUNNER_PATCH_VERSION})
 add_definitions(
     "-DLXQT_RUNNER_VERSION=\"${LXQT_RUNNER_VERSION}\""
